# linux

./: .config  .gitignore  .rustfmt.toml  Cargo.toml  MAINTAINERS  Makefile  README.md  localversion-next  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug.md  config.yml
.github/workflows/: ci.yaml  kernel-arm-debug.config  kernel-arm-release.config  kernel-arm64-debug-thinlto.config  kernel-arm64-debug.config  kernel-arm64-release-thinlto.config  kernel-arm64-release.config  kernel-debug.config  kernel-ppc64le-debug.config  kernel-ppc64le-release.config  kernel-release.config  kernel-riscv64-debug.config  kernel-riscv64-release.config  kernel-x86_64-debug-thinlto.config  kernel-x86_64-debug.config  kernel-x86_64-release-thinlto.config  kernel-x86_64-release.config  qemu-init.sh  qemu-initramfs.desc
Documentation/: COPYING-logo  index.rst
Documentation/gpu/: drm-internals.rst  vkms.rst
Documentation/kbuild/: kbuild.rst  makefiles.rst
Documentation/rust/: docs.rst  (+7 more)
Next/: SHA1s
drivers/char/rust_example/: Cargo.toml  Makefile
drivers/char/rust_example/src/: lib.rs
init/: Kconfig
kernel/: kallsyms.c
lib/: Kconfig.debug  vsprintf.c
mm/: page_alloc.c  slub.c
rust/: .gitignore  .kunitconfig  Makefile  bindgen_parameters  build_error.rs  compiler_builtins.rs  exports.c  helpers.c  module.rs
scripts/: .gitignore  Makefile  Makefile.build  Makefile.lib  Makefile.modfinal  generate_rust_analyzer.py  generate_rust_target.rs  is_rust_module.sh  kallsyms.c  min-tool-version.sh  rust-is-available.sh  rustdoc_test_builder.py  rustdoc_test_gen.py  rustdoc_test_gen.rs
(+287 files in other folders)
