# SPDX-License-Identifier: GPL-2.0

# No need for details like `authors` here -- that goes in the modinfo
# via the `kernel_module!` macro
[package]
name = "rust_example"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
kernel = { path = "../../../rust/kernel" }

